add share buttons

--- a/_posts/2017-03-07-BEM-VINDO.md
+++ b/_posts/2017-03-07-BEM-VINDO.md
@@ -10,4 +10,4 @@ Meu nome é Pedro Britto, 26, sou natural de Fortaleza/CE e prometi que eu nunca
 
 [...]
 
-_continua no próximo commit_
+continua nos próximos commits
