fixes jekyll front matter for meta description

--- a/_posts/2017-03-07-BEM-VINDO.md
+++ b/_posts/2017-03-07-BEM-VINDO.md
@@ -1,9 +1,12 @@
 ---
+permalink: /blog/porque-decidi-virar-desenvolvedor-web/
+
 title:
   Porque resolvi estudar Desenvolvimento Web
+description:
+  Meu nome é Pedro Britto, 26, sou natural de Fortaleza/CE e prometi que nunca iria me tornar um programador. É um prazer!
 excerpt:
-  Meu nome é Pedro Britto, 26, sou natural de Fortaleza/CE e prometi que eu nunca iria me tornar um programador. É um prazer!
-permalink: /blog/porque-decidi-virar-desenvolvedor-web/
+  Meu nome é Pedro Britto, 26, sou natural de Fortaleza/CE e prometi que nunca iria me tornar um programador. É um prazer!
 ---
 
 Meu nome é Pedro Britto, 26, sou natural de Fortaleza/CE e prometi que eu nunca iria me tornar um programador. É um prazer!
